# in_world_navigation

./: .gitignore  .gitmodules  .redscript-ide  CMakeLists.txt  compile_commands.json  in_world_navigation.code-workspace  mappin_colors.json  readme.md  requirements.md
.github/workflows/: cmake.yml
cmake/: FindDetours.cmake  FindModSettings.cmake  FindRED4ext.SDK.cmake  FindSpdlog.cmake  Redscript.cmake
game_dir/r6/scripts/in_world_navigation/: in_world_navigation.packed.reds
game_dir/r6/scripts/mod_settings/: mod_settings.module.reds
resources/: custom_refs.txt  in_world_navigation.cpmodproj  layout.xml
resources/.projectFiles/: fileTreeState.json
resources/packed/archive/pc/mod/: in_world_navigation.archive
resources/source/archive/user/jackhumbert/effects/: fast_travel_metro.effect  world_navigation_blue.effect  world_navigation_cyan.effect  world_navigation_teal.effect  world_navigation_white.effect  world_navigation_yellow.effect
resources/source/archive/user/jackhumbert/materials/: arrow.mi
resources/source/archive/user/jackhumbert/meshes/: arrow.mesh
resources/source/archive/user/jackhumbert/particles/: fast_travel_metro.particle  world_navigation_blue.particle  world_navigation_cyan.particle  world_navigation_teal.particle  world_navigation_white.particle  world_navigation_yellow.particle
resources/source/archive/user/jackhumbert/textures/: arrow_checker.xbm  arrow_dots.xbm
resources/source/raw/user/jackhumbert/meshes/: arrow.glb
resources/source/raw/user/jackhumbert/textures/: arrow_checker.tga  arrow_dots.tga
src/red4ext/: Addresses.hpp  CMakeLists.txt  InWorldNavigation.cpp  InWorldNavigation.hpp  LoadResRef.hpp  Main.cpp  Utils.cpp  in_world_navigation.sln  in_world_navigation.vcxproj
src/red4ext/Hooks/: UpdateNavPath.cpp
src/redscript/: Module.reds.in
src/redscript/in_world_navigation/: Extensions.reds  InWorldNavigation.reds  OperatorHelpers.reds
tools/: build.bat
